# simplest

./: .gitignore  README.md  arch_review.md  create_valid_params.py  debug_vectorbt.py  inspect_config.py  pyproject.toml  pytest_results.txt  readme.md  requirements.txt  resolved_issues.md  run._results.txt  tasks.md  technical_debt.md  test_fix.py  test_optimize_single_basic.py  test_optimize_single_refactored.py  test_yfinance_india.py
config/: default_config.yaml  user_config_example.yaml
docs/: api-reference.md  arch_review.md  architecture.md  coding-standards.md  data-models.md  environment-vars.md  epic1.txt  epic2.txt  epic3.txt  epic4.txt  memory.md  prd.md  project-structure.md  project_brief.md  resolved_issues.md  roadmap.md  rtm.md  sample_report.md  tech-stack.md  technical_debt.md  testing-strategy.md
examples/: README_Indian_Examples.md  adani_aggressive.yaml  drreddy_pharma_random.yaml  hdfc_banking.yaml  indian_stock_sample.yaml  infosys_sector_optimization.yaml  itc_multi_objective.yaml  ma_crossover_dynamic_params.yaml  ma_crossover_v2.1.yaml  maruti_automotive_winrate.yaml  ongc_energy_momentum.yaml  sbin_banking_portfolio.yaml  tatasteel_risk_management.yaml  tcs_conservative.yaml
meqsap/: cli.py
stories/: 01-project-setup-and-config.md  02-data-acquisition-and-caching.md  03-signal-generation-and-backtesting.md  04-reporting-and-presentation-layer.md  05-cli-integration-and-error-handling.md  06-enhanced-parameter-definition-framework.md  07-enhanced-optimization-progress-reporting-pseudocode.md  07-parameter-optimization-engine.md  (+3 more)
(+106 files in other folders)
