[tool.poetry]
name = "adaptive-trading-system"
version = "0.1.0"
description = "Adaptive Automated Trading Strategy Discovery System"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "adaptive_trading_system", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
typer = {extras = ["all"], version = "^0.9.0"}
pydantic = "^2.5.2"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.0"
flake8 = "^6.1.0"
flake8-bugbear = "^23.9.16"
flake8-comprehensions = "^3.14.0"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
tradefinder = "adaptive_trading_system.cli.commands:run"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 